--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -19,7 +19,7 @@
       "image": "https://i.imgur.com/4YiTYda.png",
       "title": "KTM showcase",
       "description": "MEAN Stack app that shows you how to do client server interaction, and authentication, using the Http Client.",
-      "live": "https://meanfun-e1013.web.app/",
+      "live": "https://meanfun-e1013.firebaseapp.app/",
       "details": "https://github.com/abayoss/meanFun/blob/master/README.md",
       "source": "https://github.com/abayoss/meanfun"
     },
