--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -31,7 +31,7 @@
       "source": "https://github.com/abayoss/symFun"
     },
     {
-      "image": "https://imgur.com/PpMcTcG",
+      "image": "https://i.imgur.com/PpMcTcG.png",
       "title": "Black Mambas",
       "description": "Founded in 2015, the Black Mambas is an american football team from Rabat Morocco, with both a male & female section.",
       "details": "https://github.com/abayoss/black-mambas-american-football/blob/master/README.md",
