--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -35,7 +35,8 @@
       "title": "Black Mambas",
       "description": "Founded in 2015, the Black Mambas is an american football team from Rabat Morocco, with both a male & female section.",
       "details": "https://github.com/abayoss/black-mambas-american-football/blob/master/README.md",
-      "source": "https://abayoss.github.io/black-mambas-american-football/"
+      "live": "https://abayoss.github.io/black-mambas-american-football/",
+      "source": "https://github.com/abayoss/black-mambas-american-football",
     },
     {
       "image": "https://i.imgur.com/t6P2l8T.png",
