--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -33,7 +33,7 @@
     {
       "image": "https://i.imgur.com/PpMcTcG.png",
       "title": "Black Mambas",
-      "description": "Founded in 2015, Black Mambas is an american football team from Rabat Morocco, with both a male & female section.",
+      "description": "Founded in 2015, Black Mambas is an american football team from Rabat Morocco, with a male & female section.",
       "details": "https://github.com/abayoss/black-mambas-american-football/blob/master/README.md",
       "live": "https://abayoss.github.io/black-mambas-american-football/",
       "source": "https://github.com/abayoss/black-mambas-american-football"
