--- a/package.json
+++ b/package.json
@@ -1,40 +1,25 @@
 {
-  "name": "mywebsite",
-  "version": "4.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "dev": "webpack serve",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/abayoss/abayoss.github.io.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/abayoss/abayoss.github.io/issues"
-  },
-  "homepage": "https://github.com/abayoss/abayoss.github.io#readme",
-  "dependencies": {},
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.0",
-    "css-loader": "^5.0.1",
-    "file-loader": "^6.2.0",
-    "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.3.0",
-    "node-sass": "^5.0.0",
-    "sass": "^1.29.0",
-    "sass-loader": "^10.0.5",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
-  }
+    "name": "mywebsite",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "parcel src/index.html -d docs",
+        "build": "parcel build src/index.html -d docs"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/abayoss/abayoss.github.io.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/abayoss/abayoss.github.io/issues"
+    },
+    "homepage": "https://github.com/abayoss/abayoss.github.io#readme",
+    "devDependencies": {
+        "parcel-bundler": "^1.12.4",
+        "sass": "^1.29.0"
+    }
 }
