--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "parcel src/index.html -d docs",
+        "dev": "parcel src/index.html -d dev",
         "build": "parcel build src/index.html -d docs"
     },
     "repository": {
